<resources>
    <string name="app_name">Inventory app</string>
    <string name="name">Product name</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="sup_name">Supplier name</string>
    <string name="sup_num">Supplier number</string>
    <string name="name_hint">Name</string>
    <string name="price_hint">Price</string>
    <string name="quantity_hint">Quantity</string>
    <string name="sup_name_hint">Supplier</string>
    <string name="sup_num_hint">Number</string>
    <string name="dummy_product">Insert Dummy Product</string>
    <string name="del_data">Delete All Rows</string>
    <string name="save">Save</string>
    <string name="delete_editor">Delete</string>
    <string name="empty_view_title_text">It\'s a bit lonely here</string>
    <string name="empty_view_subtitle_text">Get started by adding Product</string>
    <string name="sell_neg">The quantity should not be negetive</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit a Product</string>
    <string name="name_required">The product requires a name</string>
    <string name="price_required">The product requies valid price</string>
    <string name="quantity_required">The product requires quantity</string>
    <string name="suppl_name_required">The valid supplier name is required </string>
    <string name="suppl_phno_required">The valid supplier number is required</string>
    <string name="insert_failed">The insertion of new product failed</string>
    <string name="insert_success">The insertion is successful</string>
    <string name="unsaved_changes_dialog_msg">There are unsaved changes</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="call_to_supplier">call supplier</string>
    <string name="editor_insert_item_failed">Editing item failed</string>
    <string name="editor_insert_item_successful">editing item successful</string>
    <string name="delete_dialog_msg">Are you sure to delete?</string>
    <string name="delete">Delete</string>
    <string name="cancel">cancel</string>
    <string name="editor_delete_item_failed">Deleting was failed</string>
    <string name="editor_delete_item_successful">Deleting was successful</string>
    <string name="enter_all_fields">Fill all the blanks</string>
    <string name="update_failed">Updating values failed</string>
    <string name="update_success">Updated the values</string>
</resources>
