<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".EditItem">

    <!-- Name TextView -->
    <TextView
        style="@style/InfoStyleName"
        android:text="@string/name" />

    <TextView
        android:id="@+id/item_name"
        style="@style/InfoStyle"
        android:hint="@string/name_hint" />

    <!-- price TextView -->

    <TextView
        style="@style/InfoStyleName"
        android:text="@string/price" />

    <TextView
        android:id="@+id/item_price"
        style="@style/InfoStyle"
        android:hint="@string/price_hint" />

    <!-- quantity TextView and Button -->
    <TextView
        style="@style/InfoStyleName"
        android:text="@string/quantity_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/decrement"
            android:layout_width="46dp"
            android:layout_height="48dp"
            android:layout_marginRight="8dp"
            android:text="-" />


        <TextView
            android:id="@+id/edit_item_quantity"
            style="@style/InfoStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2" />


        <Button
            android:id="@+id/increment"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"
            android:text="+" />
    </LinearLayout>

    <!-- supplier name TextView -->
    <TextView
        style="@style/InfoStyleName"
        android:text="@string/sup_name" />

    <TextView
        android:id="@+id/item_supplier_name"
        style="@style/InfoStyle"
        android:hint="@string/sup_name_hint" />

    <TextView
        style="@style/InfoStyle"
        android:text="@string/sup_num" />

    <TextView
        android:id="@+id/item_supplier_phone"
        style="@style/InfoStyle"
        android:hint="@string/sup_num_hint" />

    <!-- supplier phone button to call -->
    <Button
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="8dp"
        android:text="@string/call_to_supplier" />
</LinearLayout>

